feat: Add new files and update configurations

--- a/yujin/weight_norm.ipynb
+++ b/yujin/weight_norm.ipynb
@@ -194,7 +194,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "splitted_class_norm = class_norm.split(num_classes//num_tasks)\n",
+    "print(splitted_class_norm)\n",
+    "color_list=['r','g','b','c','m']\n",
+    "import matplotlib.pyplot as plt\n",
+    "step_size = num_classes//num_tasks\n",
+    "for i in range(5):\n",
+    "    now_class_norm = splitted_class_norm[i]\n",
+    "    plt.scatter(torch.arange(len(now_class_norm))+i*(step_size), now_class_norm.cpu().numpy(), c=color_list[i])\n",
+    "    plt.plot([i*(step_size),i*(step_size)+step_size],[now_class_norm.mean(),now_class_norm.mean()],c=color_list[i])"
+   ]
   }
  ],
  "metadata": {
